--- a/unit-forge-lib/Cargo.toml
+++ b/unit-forge-lib/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "unit-forge-lib"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+logos = "0.15.0"
+
+[dev-dependencies]
+toml = "0.7"
