--- a/unit-forge-lib/Cargo.toml
+++ b/unit-forge-lib/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 logos = "0.15.0"
 thiserror = "2.0.12"
+indexmap = {version = "2.9", features = ["serde"]}
 
 [dev-dependencies]
 toml = "0.7"
