--- a/unit-forge-lib/Cargo.toml
+++ b/unit-forge-lib/Cargo.toml
@@ -8,6 +8,7 @@ serde = { version = "1.0", features = ["derive"] }
 logos = "0.15.0"
 thiserror = "2.0.12"
 indexmap = {version = "2.9", features = ["serde"]}
+chumsky = "0.10.1"
 
 [dev-dependencies]
 toml = "0.7"
