--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,5 +60,9 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/${{ matrix.zip_name }}
+          tag_name: ${{ github.ref_name }}
+          fail_on_unmatched_files: false
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
